--- a/src/main/webapp/resources/paymentMethod/slip.xhtml
+++ b/src/main/webapp/resources/paymentMethod/slip.xhtml
@@ -14,22 +14,28 @@
 
     <!-- IMPLEMENTATION -->
     <cc:implementation>
-        <h:panelGroup rendered="#{cc.attrs.valueRequired}" class="col" layout="block" >
-            <p:inputText autocomplete="off"   value="#{cc.attrs.paymentMethodData.creditCard.totalValue}"  id="txtVal">
-                <p:ajax process="@this" ></p:ajax>
-            </p:inputText>
-            <p:watermark value="Value" for="txtVal" />
-        </h:panelGroup>
-        <div class="col" >
-            <p:selectOneMenu value="#{cc.attrs.paymentMethodData.slip.institution}">
-                <f:selectItem itemLabel="Select Bank"/>
-                <f:selectItems value="#{institutionController.banks}" var="inst" itemLabel="#{inst.name}" itemValue="#{inst}"/>
-                <p:ajax process="@this" ></p:ajax>
-            </p:selectOneMenu>
-            <p:calendar  value="#{cc.attrs.paymentMethodData.slip.date}" pattern="#{sessionController.applicationPreference.longDateFormat}" id="date">                            
-                <p:ajax process="@this" ></p:ajax>
-            </p:calendar>
-            <p:watermark value="Date" for="date"/>
+        <div class="d-flex flex-wrap align-items-center">
+
+            <h:panelGroup rendered="#{cc.attrs.valueRequired}" class="col mx-1" layout="block" >
+                <p:inputText autocomplete="off"   value="#{cc.attrs.paymentMethodData.creditCard.totalValue}"  id="txtVal">
+                    <p:ajax process="@this" ></p:ajax>
+                </p:inputText>
+                <p:watermark value="Value" for="txtVal" />
+            </h:panelGroup>
+
+            <div class="col mx-1"  >
+                <div class="d-flex align-items-center">
+                    <p:selectOneMenu value="#{cc.attrs.paymentMethodData.slip.institution}" class="mx-1">
+                        <f:selectItem itemLabel="Select Bank"/>
+                        <f:selectItems value="#{institutionController.banks}" var="inst" itemLabel="#{inst.name}" itemValue="#{inst}"/>
+                        <p:ajax process="@this" ></p:ajax>
+                    </p:selectOneMenu>
+                    <p:calendar class="mx-1" value="#{cc.attrs.paymentMethodData.slip.date}" pattern="#{sessionController.applicationPreference.longDateFormat}" id="date">                            
+                        <p:ajax process="@this" ></p:ajax>
+                    </p:calendar>
+                    <p:watermark value="Date" for="date"/>
+                </div>
+            </div>
         </div>
     </cc:implementation>
 </html>
