--- a/src/main/webapp/hr/hr_shift_table.xhtml
+++ b/src/main/webapp/hr/hr_shift_table.xhtml
@@ -8,88 +8,111 @@
     <ui:define name="content">
         <h:outputStylesheet library="css" name="printing.css" />
         <h:form id="form"> 
-            <div styleClass="alignTop" >
-                <div style="float: left;" >
+            <div class="row m-3">
+                <div class="col-3">
+                    <div class="row m-3">
+                        <div class="col-3">
+                            <h:outputLabel value="From Date" />
+                        </div>
+                        <div class="col-3">
+                            <p:calendar navigator="true" id="frmDate"  value="#{shiftTableController.fromDate}" pattern="#{sessionController.applicationPreference.longDateFormat}" />
+                        </div> 
+                    </div>
+                    <div class="row m-3">
+                        <div class="col-3">
+                            <h:outputLabel value="To Date" />
+                        </div>
+                        <div class="col-3">
+                            <p:calendar navigator="true" id="toDate" value="#{shiftTableController.toDate}" pattern="#{sessionController.applicationPreference.longDateFormat}" />
+                        </div> 
+                    </div>
+                    <div class="row m-3">
+                        <div class="col-3">
+                            <h:outputLabel value="Roster" />
+                        </div>
+                        <div class="col-3">
+                            <p:selectOneMenu id="roster" value="#{shiftTableController.roster}" >
+                                <f:selectItem itemLabel="Select Roster"/>
+                                <f:selectItems value="#{rosterController.items}" var="r" itemLabel="#{r.name}" itemValue="#{r}"/>
+                                <f:ajax event="change" execute="@this" render="lst" 
+                                        listener="#{shiftTableController.selectRosterLstener()}" />
+                            </p:selectOneMenu>
+                        </div> 
+                    </div>
+                </div>
+                <div class=" row ">
+                    <div class="m-2">
+                        <p:commandButton ajax="false" value="Fill New"
+                                         actionListener="#{shiftTableController.makeTableNull()}"
+                                         action="#{shiftTableController.createShiftTable()}"
+                                         class="m-1"
+                                         />
 
-                    <h:panelGrid columns="2">
-                        <h:outputLabel value="From Date"/>
-                        <p:calendar navigator="true" id="frmDate" value="#{shiftTableController.fromDate}" pattern="#{sessionController.applicationPreference.longDateFormat}" />
-                        <h:outputLabel value="To Date"/>
-                        <p:calendar navigator="true" id="toDate" value="#{shiftTableController.toDate}" pattern="#{sessionController.applicationPreference.longDateFormat}" />
-                        <h:outputLabel value="Roster"/>
-                        <p:selectOneMenu id="roster" value="#{shiftTableController.roster}">
-                            <f:selectItem itemLabel="Select Roster"/>
-                            <f:selectItems value="#{rosterController.items}" var="r" itemLabel="#{r.name}" itemValue="#{r}"/>
-                            <f:ajax event="change" execute="@this" render="lst" 
-                                    listener="#{shiftTableController.selectRosterLstener()}" />
-                        </p:selectOneMenu>
-                    </h:panelGrid>
+                        <p:commandButton ajax="false" value="Fill Old Roster"
+                                         actionListener="#{shiftTableController.makeTableNull()}"
+                                         action="#{shiftTableController.fetchShiftTable()}"
+                                         class=""
+
+                                         />
+
+                        <p:commandButton value="Go to Roster Table" ajax="false" 
+                                         action="hr_shift_table_finger_print" 
+                                         actionListener="#{shiftTableController.makeNull()}" 
+                                         class="m-1"
+                                         /> 
+                        
+                        <p:commandButton ajax="false" value="Hide" 
+                                         action="#{shiftTableController.hide}"
+                                         />
+
+                        <p:commandButton ajax="false" value="Visible" 
+                                         action="#{shiftTableController.visible}"
+                                         class="m-1"
+                                         />
+
+                        <p:commandButton ajax="false" value="Save"
+                                         action="#{shiftTableController.save}"
+                                         />
+
+                        <p:commandButton ajax="false" value="Clear" 
+                                         action="#{shiftTableController.makeNull()}"
+                                         class="m-1"
+                                         />
+                    </div>
+
+<!--                    <div class="m-2">
+                        <p:commandButton ajax="false" value="Hide" 
+                                         action="#{shiftTableController.hide}"
+                                         class="m-1"
+                                         />
+
+                        <p:commandButton ajax="false" value="Visible" 
+                                         action="#{shiftTableController.visible}"
+                                         />
+
+                        <p:commandButton ajax="false" value="Save"
+                                         action="#{shiftTableController.save}"
+                                         class="m-1"/>
+
+                        <p:commandButton ajax="false" value="Clear" 
+                                         action="#{shiftTableController.makeNull()}"
+                                         />
+                    </div>-->
+
+<!--                    <div class="m-2">
+                        <p:commandButton value="Print Blank Roster" ajax="false" action="#" class="m-1">
+                            <p:printer target="print" ></p:printer>
+                        </p:commandButton>
+
+                        <p:commandButton value="Print Filled Roster" ajax="false" action="#"  >
+                            <p:printer target="print3" ></p:printer>
+                        </p:commandButton>
+                    </div>-->
 
                 </div>
-
-                <div>
-                    <table class="alignTop" >
-                        <tr>
-                            <td>
-                                <p:commandButton ajax="false" value="Fill New"
-                                                 actionListener="#{shiftTableController.makeTableNull()}"
-                                                 action="#{shiftTableController.createShiftTable()}"
-                                                  />  
-                            </td>
-                            <td>
-                                <p:commandButton ajax="false" value="Fill Old Roster"
-                                                 actionListener="#{shiftTableController.makeTableNull()}"
-                                                 action="#{shiftTableController.fetchShiftTable()}"
-                                                   />   
-                            </td>
-                            <td colspan="2" >
-                                <p:commandButton value="Go to Roster Table" ajax="false" action="hr_shift_table_finger_print" actionListener="#{shiftTableController.makeNull()}"  >
-                                </p:commandButton>
-                            </td>
-                        </tr>
-                    </table>
-                    <table>
-                        <tr>
-                            <td>
-                                <p:commandButton ajax="false" value="Hide" 
-                                                 action="#{shiftTableController.hide}"  />
-                            </td>
-                            <td>
-                                <p:commandButton ajax="false" value="Visible" 
-                                                 action="#{shiftTableController.visible}"  />
-                            </td>
-                            <td>
-                                <p:commandButton ajax="false" value="Save"
-                                                 action="#{shiftTableController.save}" />
-                            </td>
-                            <td>
-                                <p:commandButton ajax="false" value="Clear" 
-                                                 action="#{shiftTableController.makeNull()}"  />
-                            </td>
-                        </tr>
-                    </table>
-                    <table>
-                        <tr>
-                            <td>
-                                <p:commandButton value="Print Blank Roster" ajax="false" action="#"  >
-                                    <p:printer target="print" ></p:printer>
-                                </p:commandButton>
-                            </td>
-                            <td>
-                                <p:commandButton value="Print Filled Roster" ajax="false" action="#"  >
-                                    <p:printer target="print3" ></p:printer>
-                                </p:commandButton>
-                            </td>
-
-                        </tr>
-                    </table>
-
-                </div>
-
-
             </div>
 
-            <p:panel id="print3" styleClass="printOnly"  >
+            <p:panel id="print3" styleClass="printOnly" class="m-3" >
 
                 <f:facet name="header">
                     <h:outputLabel value="Roster Of #{shiftTableController.roster.name}"/><br/>
@@ -101,6 +124,7 @@
                         <f:convertDateTime pattern="#{sessionController.applicationPreference.longDateFormat}"/>
                     </h:outputLabel>
                 </f:facet>
+
                 <table  style="width: 98%;font-family: serif; font-size: 12px;" border="0" class="printOnly">
                     <tr >
                         <ui:repeat value="#{shiftTableController.shiftTables}" var="data" >
@@ -176,9 +200,14 @@
                         </ui:repeat>
                     </tr>
                 </table>
+
             </p:panel>
 
-            <p:panel id="print2">
+            <p:commandButton value="Print Filled Roster" ajax="false" action="#" class="mx-3">
+                <p:printer target="print3" ></p:printer>
+            </p:commandButton>
+
+            <p:panel id="print2" class="m-3">
                 <f:facet name="header">
                     <h:outputLabel value="Roster Of #{shiftTableController.roster.name}"/><br/>
                     <h:outputLabel value="#{shiftTableController.fromDate}">
@@ -189,10 +218,6 @@
                         <f:convertDateTime pattern="#{sessionController.applicationPreference.longDateFormat}"/>
                     </h:outputLabel>
                 </f:facet>
-
-
-
-
 
                 <p:dataGrid  id="lst" columns="#{shiftTableController.dateRange}"
                              var="data" value="#{shiftTableController.shiftTables}" >
@@ -260,13 +285,9 @@
 
                     </p:dataTable>  
                 </p:dataGrid>
-
-
-
             </p:panel>
 
-
-            <p:panel id="print" styleClass="printOnly" >
+            <p:panel id="print" styleClass="printOnly" class="m-3">
                 <f:facet name="header">
                     <h:outputLabel value="Roster Of #{shiftTableController.roster.name}"/><br/>
                     <h:outputLabel value="#{shiftTableController.fromDate}">
@@ -312,7 +333,7 @@
                         </p:column>
 
                         <p:column rendered="#{data.date ne null}"  
-                                  style="width: 75px!important;                          
+                                  style="width: 75px!important;
                                   padding-top: 0px!important;
                                   padding-bottom: 0px!important;
                                   font-size: 14px!important;" >
@@ -327,13 +348,16 @@
 
                         </p:column>                   
 
-
                     </p:dataTable>  
                 </p:dataGrid>
 
-
-
             </p:panel>
+
+
+            <p:commandButton value="Print Blank Roster" ajax="false" action="#" class="mx-3 mb-3">
+                <p:printer target="print" ></p:printer>
+            </p:commandButton>
+
 
         </h:form>  
 
