--- a/src/main/webapp/ward/ward_pharmacy_bht_issue_request_bill_search.xhtml
+++ b/src/main/webapp/ward/ward_pharmacy_bht_issue_request_bill_search.xhtml
@@ -8,124 +8,131 @@
 
     <ui:define name="content">
         <h:form>
-            <p:panel >
+            <p:panel style="height: 100vh" >
                 <f:facet name="header">
-                    <p:outputLabel value="Select Request For Department : #{sessionController.department.name}"/>     
-                    <div  class="d-flex">
-                        <div>
-                            <p:panel>
-                                <h:panelGrid columns="1" >
-                                    <h:outputLabel value="From Date"/>
-                                    <p:calendar styleClass="dateTimePicker" id="fromDate" value="#{searchController.fromDate}" navigator="false" pattern="#{sessionController.applicationPreference.longDateTimeFormat}" >      
-                                    </p:calendar>
-                                    <h:outputLabel value="To Date"/>
-                                    <p:calendar id="toDate" value="#{searchController.toDate}" navigator="false" pattern="#{sessionController.applicationPreference.longDateTimeFormat}" >                                                                              
-                                    </p:calendar>
-                                    <p:commandButton class="my-2" id="btnSearch" ajax="false" value="Search" action="#{searchController.createInwardBHTRequestTable}"
-                                                     actionListener="#{transferIssueController.makeNull()}"/>
-
-
-                                    <h:outputLabel value="Request No"/> 
-                                    <p:inputText autocomplete="off"  value="#{searchController.searchKeyword.billNo}" />  
-                                    <h:outputLabel value="BHT No"/> 
-
-                                    <p:inputText autocomplete="off"  value="#{searchController.searchKeyword.bhtNo}" />                                                
-                                    <h:outputLabel/><h:outputLabel/>
-                                </h:panelGrid>
-                            </p:panel>
-                        </div>
-                        <div class="px-1">
-                            <p:dataTable 
-                                value="#{searchController.bills}" 
-                                var="p"
-                                paginator="true"
-                                paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
-                                rowsPerPageTemplate="5,10,15"
-                                >
-                                <p:column headerText="Request No">                      
-                                    <h:outputLabel value="#{p.deptId}"/>                         
-                                </p:column>
-                                <p:column headerText="Department For request">                      
-                                    <h:outputLabel value="#{p.toDepartment.name}"/>                          
-                                </p:column> 
-                                <p:column headerText="Requested at"  >
-
-                                    <h:outputLabel value="#{p.createdAt}" >
-                                        <f:convertDateTime  timeZone="Asia/Colombo" pattern="#{sessionController.applicationPreference.longDateTimeFormat}" />
-                                    </h:outputLabel>
-                                    <br/>
-                                    <h:panelGroup rendered="#{p.cancelled}" >
-                                        <h:outputLabel style="color: red;" value="Cancelled at " />
-                                        <h:outputLabel style="color: red;" rendered="#{p.cancelled}" 
-                                                       value="#{p.cancelledBill.createdAt}" >
-                                            <f:convertDateTime  timeZone="Asia/Colombo" pattern="#{sessionController.applicationPreference.longDateTimeFormat}" />
-                                        </h:outputLabel>
-                                    </h:panelGroup>
-
-                                </p:column>                 
-                                <p:column headerText="Requested by" >                      
-                                    <h:outputLabel value="#{p.creater.webUserPerson.name}" >                                      
-                                    </h:outputLabel>                          
-                                    <br/>
-                                    <h:panelGroup rendered="#{p.cancelled}" >
-                                        <h:outputLabel style="color: red;" value="Cancelled By " />
-                                        <h:outputLabel style="color: red;" rendered="#{p.cancelled}" value="#{p.cancelledBill.creater.webUserPerson.name}" >                                       
-                                        </h:outputLabel>
-                                    </h:panelGroup>
-                                </p:column>  
-                                <p:column>
-                                    <p:commandButton ajax="false" value="View Request" action="/ward/ward_pharmacy_reprint_bht_issue_request">
-                                        <f:setPropertyActionListener value="#{p}" target="#{pharmacyBillSearch.bill}"/>
-                                    </p:commandButton>
-                                </p:column>
-                                <p:column headerText="Issued">                   
-                                    <p:dataTable var="b" value="#{p.listOfBill}">                           
-                                        <p:column  >                                                               
-                                            <h:outputLabel  value="#{b.deptId}"/>                                   
-                                        </p:column>
-                                        <p:column >
-                                            <h:outputLabel value="#{b.createdAt}" >
-                                                <f:convertDateTime  timeZone="Asia/Colombo" pattern="#{sessionController.applicationPreference.longDateTimeFormat}" />
-                                            </h:outputLabel>
-                                            <br/>
-                                            <h:panelGroup rendered="#{b.cancelled}" >
-                                                <h:outputLabel style="color: red;" value="Cancelled at " />
-                                                <h:outputLabel style="color: red;" rendered="#{b.cancelled}"
-                                                               value="#{b.cancelledBill.createdAt}" >
-                                                    <f:convertDateTime  timeZone="Asia/Colombo" pattern="#{sessionController.applicationPreference.longDateTimeFormat}" />
-                                                </h:outputLabel>
-                                            </h:panelGroup>                               
-                                        </p:column>                             
-                                        <p:column >
-                                            <h:outputLabel value="#{b.creater.webUserPerson.name}"/>     
-                                            <br/>
-                                            <h:panelGroup rendered="#{b.cancelled}" >
-                                                <h:outputLabel style="color: red;" value="Cancelled By " />
-                                                <h:outputLabel style="color: red;" rendered="#{b.cancelled}" value="#{b.cancelledBill.creater.webUserPerson.name}" >                                       
-                                                </h:outputLabel>
-                                            </h:panelGroup>
-                                        </p:column> 
-                                        <p:column >                              
-                                            <h:outputLabel value="#{b.toStaff.person.nameWithTitle}"/>                                   
-                                        </p:column> 
-                                        <p:column >
-                                            <h:outputLabel value="#{b.netTotal}">
-                                                <f:convertNumber pattern="#,##0.00" />
-                                            </h:outputLabel>                                  
-                                        </p:column>
-                                        <p:column>
-                                            <p:commandButton ajax="false" value="View Issue Bill" action="/ward/ward_pharmacy_reprint_bht_issue_bill_reprint" >
-                                                <f:setPropertyActionListener target="#{pharmacyBillSearch.bill}" value="#{b}"/>
-                                            </p:commandButton>
-                                        </p:column>
-
-                                    </p:dataTable>
-                                </p:column>
-                            </p:dataTable> 
-                        </div>
-                    </div>
+                    <h:outputText styleClass="fas fa-file-invoice"/>
+                    <p:outputLabel class="mx-4" value="Inward Bills" />
+<!--                    <p:outputLabel value="Select Request For Department : #{sessionController.department.name}"/>     -->
 
                 </f:facet>
+                <div  class="d-flex">
+
+                    <h:panelGrid columns="1" >
+                        <h:outputLabel value="From Date" class="my-1"/>
+                        <p:calendar styleClass="dateTimePicker my-1" id="fromDate" value="#{searchController.fromDate}" navigator="false" pattern="#{sessionController.applicationPreference.longDateTimeFormat}" >      
+                        </p:calendar>
+                        <h:outputLabel value="To Date" class="my-1"/>
+                        <p:calendar class="my-1" id="toDate" value="#{searchController.toDate}" navigator="false" pattern="#{sessionController.applicationPreference.longDateTimeFormat}" >                                                                              
+                        </p:calendar>
+                        <p:commandButton 
+                            class="my-2 w-100"
+                            id="btnSearch"
+                            ajax="false"
+                            value="Search"
+                            action="#{searchController.createInwardBHTRequestTable}"
+                            actionListener="#{transferIssueController.makeNull()}"/>
+
+
+                        <h:outputLabel value="Request No" class="my-1"/> 
+                        <p:inputText class="my-1" autocomplete="off"  value="#{searchController.searchKeyword.billNo}" />  
+                        <h:outputLabel value="BHT No" class="my-1"/> 
+
+                        <p:inputText class="my-1" autocomplete="off"  value="#{searchController.searchKeyword.bhtNo}" />                                                
+                        <h:outputLabel/><h:outputLabel/>
+                    </h:panelGrid>
+
+                    <div class="px-1">
+                        <p:dataTable 
+                            value="#{searchController.bills}" 
+                            var="p"
+                            paginator="true"
+                            paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
+                            rowsPerPageTemplate="5,10,15"
+                            >
+                            <p:column headerText="Request No">                      
+                                <h:outputLabel value="#{p.deptId}"/>                         
+                            </p:column>
+                            <p:column headerText="Department For request">                      
+                                <h:outputLabel value="#{p.toDepartment.name}"/>                          
+                            </p:column> 
+                            <p:column headerText="Requested at"  >
+
+                                <h:outputLabel value="#{p.createdAt}" >
+                                    <f:convertDateTime  timeZone="Asia/Colombo" pattern="#{sessionController.applicationPreference.longDateTimeFormat}" />
+                                </h:outputLabel>
+                                <br/>
+                                <h:panelGroup rendered="#{p.cancelled}" >
+                                    <h:outputLabel style="color: red;" value="Cancelled at " />
+                                    <h:outputLabel style="color: red;" rendered="#{p.cancelled}" 
+                                                   value="#{p.cancelledBill.createdAt}" >
+                                        <f:convertDateTime  timeZone="Asia/Colombo" pattern="#{sessionController.applicationPreference.longDateTimeFormat}" />
+                                    </h:outputLabel>
+                                </h:panelGroup>
+
+                            </p:column>                 
+                            <p:column headerText="Requested by" >                      
+                                <h:outputLabel value="#{p.creater.webUserPerson.name}" >                                      
+                                </h:outputLabel>                          
+                                <br/>
+                                <h:panelGroup rendered="#{p.cancelled}" >
+                                    <h:outputLabel style="color: red;" value="Cancelled By " />
+                                    <h:outputLabel style="color: red;" rendered="#{p.cancelled}" value="#{p.cancelledBill.creater.webUserPerson.name}" >                                       
+                                    </h:outputLabel>
+                                </h:panelGroup>
+                            </p:column>  
+                            <p:column>
+                                <p:commandButton ajax="false" value="View Request" action="/ward/ward_pharmacy_reprint_bht_issue_request">
+                                    <f:setPropertyActionListener value="#{p}" target="#{pharmacyBillSearch.bill}"/>
+                                </p:commandButton>
+                            </p:column>
+                            <p:column headerText="Issued">                   
+                                <p:dataTable var="b" value="#{p.listOfBill}">                           
+                                    <p:column  >                                                               
+                                        <h:outputLabel  value="#{b.deptId}"/>                                   
+                                    </p:column>
+                                    <p:column >
+                                        <h:outputLabel value="#{b.createdAt}" >
+                                            <f:convertDateTime  timeZone="Asia/Colombo" pattern="#{sessionController.applicationPreference.longDateTimeFormat}" />
+                                        </h:outputLabel>
+                                        <br/>
+                                        <h:panelGroup rendered="#{b.cancelled}" >
+                                            <h:outputLabel style="color: red;" value="Cancelled at " />
+                                            <h:outputLabel style="color: red;" rendered="#{b.cancelled}"
+                                                           value="#{b.cancelledBill.createdAt}" >
+                                                <f:convertDateTime  timeZone="Asia/Colombo" pattern="#{sessionController.applicationPreference.longDateTimeFormat}" />
+                                            </h:outputLabel>
+                                        </h:panelGroup>                               
+                                    </p:column>                             
+                                    <p:column >
+                                        <h:outputLabel value="#{b.creater.webUserPerson.name}"/>     
+                                        <br/>
+                                        <h:panelGroup rendered="#{b.cancelled}" >
+                                            <h:outputLabel style="color: red;" value="Cancelled By " />
+                                            <h:outputLabel style="color: red;" rendered="#{b.cancelled}" value="#{b.cancelledBill.creater.webUserPerson.name}" >                                       
+                                            </h:outputLabel>
+                                        </h:panelGroup>
+                                    </p:column> 
+                                    <p:column >                              
+                                        <h:outputLabel value="#{b.toStaff.person.nameWithTitle}"/>                                   
+                                    </p:column> 
+                                    <p:column >
+                                        <h:outputLabel value="#{b.netTotal}">
+                                            <f:convertNumber pattern="#,##0.00" />
+                                        </h:outputLabel>                                  
+                                    </p:column>
+                                    <p:column>
+                                        <p:commandButton ajax="false" value="View Issue Bill" action="/ward/ward_pharmacy_reprint_bht_issue_bill_reprint" >
+                                            <f:setPropertyActionListener target="#{pharmacyBillSearch.bill}" value="#{b}"/>
+                                        </p:commandButton>
+                                    </p:column>
+
+                                </p:dataTable>
+                            </p:column>
+                        </p:dataTable> 
+                    </div>
+                </div>
+
+
 
             </p:panel>
         </h:form>
