Closes Issue#1802 Signed-off-by: Senula88 <senulananayakkara88@gmail.com>

--- a/src/main/webapp/resources/inward/finalTable.xhtml
+++ b/src/main/webapp/resources/inward/finalTable.xhtml
@@ -14,9 +14,12 @@
 
     <!-- IMPLEMENTATION -->
     <cc:implementation>
-        <p:commandButton ajax="false" value="Excel" styleClass="noPrintButton"  >
+        <div class="col-md-2">
+            <p:commandButton ajax="false" value="Excel" styleClass="noPrintButton"  class="w-25">
             <p:dataExporter type="xlsx" target="tb1" fileName="bht_details"  />
         </p:commandButton>
+        </div>
+        
         <p:dataTable id="tb1" value="#{cc.attrs.bill.billItems}" var="bip"
                      rowStyleClass="#{bip.netValue !=0 or bip.adjustedValue!=0 ?bip.inwardChargeType.label eq 'Linen Charges' ?'redText':'':'noDisplayRow' }">
             <p:column headerText="searialNo">
