--- a/src/main/webapp/inward/inward_reprint_bill_service.xhtml
+++ b/src/main/webapp/inward/inward_reprint_bill_service.xhtml
@@ -6,7 +6,10 @@
       xmlns:h="http://java.sun.com/jsf/html"
       xmlns:f="http://java.sun.com/jsf/core"
       xmlns:bi="http://java.sun.com/jsf/composite/inward/bill"
-      xmlns:bill="http://java.sun.com/jsf/composite/bill">
+      xmlns:bill="http://java.sun.com/jsf/composite/bill"
+      xmlns:emr="http://xmlns.jcp.org/jsf/composite/ezcomp/emr"
+      xmlns:in="http://java.sun.com/jsf/composite/inward">
+
 
     <h:body>
 
@@ -15,8 +18,17 @@
             <ui:define name="content">
                 <h:form>
                     <p:panel  header="Service Reprint">
-                        <div class=" d-flex justify-content-between m-3">
+                        <div class=" d-flex justify-content-between m-1">
                             <div >
+
+                                <p:commandButton value="Reprint" ajax="false" action="#"  >
+                                    <p:printer target="gpBillPreview" ></p:printer>
+                                </p:commandButton>
+
+                                <p:commandButton value="Reprint(Cancel/Refund)" ajax="false" action="#" rendered="#{inwardSearch.bill.refundBills.size()>0 or inwardSearch.bill.cancelled}" >
+                                    <p:printer target="gpBillPreview2" ></p:printer>
+                                </p:commandButton>
+
                                 <p:commandButton ajax="false" 
                                                  value="Cancel" 
                                                  icon="fa fa-ban"
@@ -67,105 +79,95 @@
                         </div>
 
                         <div class="col-12">
-                            <div class="row  d-flex justify-content-center m-3">
-                                <div class="col-6">
+                            <div class="row  d-flex justify-content-center m-1">
+                                <div class="col-3 ">
+
                                     <p:panel header="Patient Detail">
-                                        <p:panelGrid columns="2">
-                                            <h:outputLabel value="Patient ​Name:" ></h:outputLabel>
-                                            <h:outputLabel value="#{inwardSearch.bill.patient.person.nameWithTitle }" ></h:outputLabel>
-                                            <h:outputLabel value="Bht No:" ></h:outputLabel>
-                                            <h:outputLabel value="#{inwardSearch.bill.patientEncounter.bhtNo }" ></h:outputLabel>
-                                            <h:outputLabel value="Age" />
-                                            <h:outputLabel value="#{inwardSearch.bill.patient.age}"  />
-                                            <h:outputLabel value="Sex" >
-                                            </h:outputLabel>
-                                            <h:outputLabel value="#{inwardSearch.bill.patient.person.sex}" >
-                                            </h:outputLabel>
-                                            <h:outputLabel value="Phone" >
-                                            </h:outputLabel>
-                                            <h:outputLabel value="#{inwardSearch.bill.patient.person.phone}" >
-                                            </h:outputLabel>
-                                        </p:panelGrid>
+                                        <in:bhtDetail admission="#{inwardSearch.bill.patientEncounter}"/>
                                     </p:panel>
                                 </div>
-                                <div class="col-6">
-                                    <p:panel header="Bill Detail">
-                                        <p:panelGrid columns="2">
+                                <div class="col-2" >
+
+                                    <p:panelGrid columns="1" class="w-100">
+                                        <f:facet name = "header">
+                                            <h:outputLabel value="Bill Details"/>
+                                        </f:facet>
+                                        <h:panelGroup>
                                             <h:outputLabel value="Bill No :" ></h:outputLabel>
                                             <h:outputLabel value="#{inwardSearch.bill.insId}" ></h:outputLabel>
+                                        </h:panelGroup>
+                                        <h:panelGroup>
                                             <h:outputLabel value="Payment Type : " ></h:outputLabel>
                                             <h:outputLabel value="#{inwardSearch.bill.paymentMethod}" ></h:outputLabel>
+                                        </h:panelGroup>
+                                        <h:panelGroup>
                                             <h:outputLabel value="Net Total :" ></h:outputLabel>
                                             <h:outputLabel value="#{inwardSearch.bill.netTotal}" ></h:outputLabel>
-                                        </p:panelGrid>
-                                    </p:panel>
+                                        </h:panelGroup>
+
+
+
+                                    </p:panelGrid>
+
+                                </div>
+                                <div class="col-7 " >
+                                    <p:dataTable rowIndexVar="rowIndex"
+                                                 editable="true"
+                                                 value="#{inwardSearch.billFees}" var="bip" >    
+                                        <p:ajax event="rowEdit" listener="#{billSearch.onEdit}" />  
+                                        <p:ajax event="rowEditCancel" listener="#{billSearch.onEdit}" /> 
+                                        <p:column>
+                                            <f:facet name="header">No</f:facet>
+                                            <h:outputLabel value="#{rowIndex+1}"/>
+                                        </p:column>
+                                        <p:column>
+                                            <f:facet name="header">Item</f:facet>
+                                            <h:outputLabel value="#{bip.billItem.item.name}"/>
+                                        </p:column>
+                                        <p:column headerText="Returned">
+                                            <h:outputLabel  rendered="#{bip.billItem.refunded}" value="Returned" style="color: red;"/>
+                                        </p:column>  
+                                        <p:column>
+                                            <f:facet name="header">Fee</f:facet>
+                                            <h:outputLabel value="#{bip.feeValue}"/>
+                                        </p:column>  
+                                        <p:column>
+                                            <f:facet name="header">Fee Name</f:facet>
+                                            <h:outputLabel value="#{bip.fee.name}"/>
+                                        </p:column> 
+                                        <p:column>
+                                            <f:facet name="header">Speciality</f:facet>
+                                            <h:outputLabel value="#{bip.fee.speciality.name}"/>
+                                        </p:column> 
+                                        <p:column headerText="Payee">
+                                            <p:cellEditor>  
+                                                <f:facet name="output"> 
+                                                    <h:outputLabel value="#{bip.staff.person.name}"  ></h:outputLabel>
+                                                </f:facet>  
+                                                <f:facet name="input">  
+                                                    <p:selectOneMenu value="#{bip.staff}" rendered="#{bip.fee.speciality!=null}" disabled="#{bip.paidValue!=0 or !webUserController.hasPrivilege('ChangeProfessionalFee')}" >
+                                                        <f:selectItem itemLabel="Select Staff" />
+                                                        <f:selectItems  value="#{staffController.getSpecialityStaff(bip.fee.speciality)}" var="bifs" itemLabel="#{bifs.person.name}" itemValue="#{bifs}" />
+                                                    </p:selectOneMenu>
+                                                </f:facet>  
+                                            </p:cellEditor>  
+
+                                        </p:column>
+                                        <p:column >  
+                                            <p:rowEditor > 
+                                            </p:rowEditor>
+                                        </p:column>                               
+                                    </p:dataTable>
                                 </div>
                             </div>
-                            <div class="row d-flex justify-content-center m-3">
-                                <p:dataTable rowIndexVar="rowIndex"
-                                             editable="true"
-                                             value="#{inwardSearch.billFees}" var="bip" >    
-                                    <p:ajax event="rowEdit" listener="#{billSearch.onEdit}" />  
-                                    <p:ajax event="rowEditCancel" listener="#{billSearch.onEdit}" /> 
-                                    <p:column>
-                                        <f:facet name="header">No</f:facet>
-                                        <h:outputLabel value="#{rowIndex+1}"/>
-                                    </p:column>
-                                    <p:column>
-                                        <f:facet name="header">Item</f:facet>
-                                        <h:outputLabel value="#{bip.billItem.item.name}"/>
-                                    </p:column>
-                                    <p:column headerText="Returned">
-                                        <h:outputLabel  rendered="#{bip.billItem.refunded}" value="Returned" style="color: red;"/>
-                                    </p:column>  
-                                    <p:column>
-                                        <f:facet name="header">Fee</f:facet>
-                                        <h:outputLabel value="#{bip.feeValue}"/>
-                                    </p:column>  
-                                    <p:column>
-                                        <f:facet name="header">Fee Name</f:facet>
-                                        <h:outputLabel value="#{bip.fee.name}"/>
-                                    </p:column> 
-                                    <p:column>
-                                        <f:facet name="header">Speciality</f:facet>
-                                        <h:outputLabel value="#{bip.fee.speciality.name}"/>
-                                    </p:column> 
-                                    <p:column headerText="Payee">
-                                        <p:cellEditor>  
-                                            <f:facet name="output"> 
-                                                <h:outputLabel value="#{bip.staff.person.name}"  ></h:outputLabel>
-                                            </f:facet>  
-                                            <f:facet name="input">  
-                                                <p:selectOneMenu value="#{bip.staff}" rendered="#{bip.fee.speciality!=null}" disabled="#{bip.paidValue!=0 or !webUserController.hasPrivilege('ChangeProfessionalFee')}" >
-                                                    <f:selectItem itemLabel="Select Staff" />
-                                                    <f:selectItems  value="#{staffController.getSpecialityStaff(bip.fee.speciality)}" var="bifs" itemLabel="#{bifs.person.name}" itemValue="#{bifs}" />
-                                                </p:selectOneMenu>
-                                            </f:facet>  
-                                        </p:cellEditor>  
 
-                                    </p:column>
-                                    <p:column style="width:6%">  
-                                        <p:rowEditor > 
-                                        </p:rowEditor>
-                                    </p:column>                               
-                                </p:dataTable>
-                            </div>
                         </div>
 
                     </p:panel>
 
-                    <p:panel>
+                    <div class="printingOnly" >
 
-                        <div class="nonPrintBlock m-3">
-                            <p:commandButton value="Reprint" ajax="false" action="#"  >
-                                <p:printer target="gpBillPreview" ></p:printer>
-                            </p:commandButton>
-                            <p:commandButton value="Reprint(Cancel/Refund)" ajax="false" action="#" rendered="#{inwardSearch.bill.refundBills.size()>0 or inwardSearch.bill.cancelled}" >
-                                <p:printer target="gpBillPreview2" ></p:printer>
-                            </p:commandButton>
-                        </div>
-
-                        <p:panel id="gpBillPreview" class="m-3">
+                       <p:panel id="gpBillPreview" class="m-3">
                             <h:panelGroup rendered="#{sessionController.currentPreference.inwardServiceBillPaperType eq 'PosPaper'}">
                                 <ui:repeat value="#{inwardSearch.bill}" var="bill">
                                     <bill:inwardBillPrintPos bill="#{bill}" duplicate="false"/>
@@ -177,6 +179,7 @@
                                 </ui:repeat>  
                             </h:panelGroup>
                         </p:panel>
+                        
                         <p:panel id="gpBillPreview2" class="m-3">
                             <h:panelGroup rendered="#{sessionController.currentPreference.inwardServiceBillPaperType eq 'PosPaper'}">
                                 <ui:repeat value="#{inwardSearch.bill.refundBills}" var="bill" rendered="#{!inwardSearch.bill.cancelled}">
@@ -196,8 +199,7 @@
                                 </ui:repeat>
                             </h:panelGroup>
                         </p:panel>
-                    </p:panel>
-
+                    </div>
 
                 </h:form>
             </ui:define>
