--- a/src/main/webapp/resources/ezcomp/emr/patient.xhtml
+++ b/src/main/webapp/resources/ezcomp/emr/patient.xhtml
@@ -8,12 +8,12 @@
 
     <!-- INTERFACE -->
     <cc:interface>
-        <cc:attribute name="patient" type="com.divudi.entity.Patient" class="com.divudi.entity.Patient" />
+        <cc:attribute name="patient" type="com.divudi.entity.Patient"  />
     </cc:interface>
 
     <!-- IMPLEMENTATION -->
     <cc:implementation>
-        <p:panelGrid columns="2" class="w-100 m-1 p-1" >
+        <h:panelGrid columns="2" class="w-100 m-1 p-1" >
             <p:outputLabel value="Name:" rendered="#{not empty cc.attrs.patient.person.nameWithTitle}" />
             <p:outputLabel value="#{cc.attrs.patient.person.nameWithTitle}" rendered="#{not empty cc.attrs.patient.person.nameWithTitle}" />
 
@@ -66,6 +66,6 @@
 
 
 
-        </p:panelGrid>
+        </h:panelGrid>
     </cc:implementation>
 </html>
